# pydicer

./: .buildinfo  .coveragerc  .gitignore  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analyse.html  code_of_conduct.html  config.html  contributing.html  convert.html  dataset.html  docker-compose.yml  generate.html  genindex.html  index.html  input.html  nnunet.html  objects.inv  preprocess.html  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  softwarex.md  tool.html  utils.html  visualise.html
.devcontainer/: devcontainer.json  docker-compose.yml  install-dev-tools.sh
.doctrees/: analyse.doctree  code_of_conduct.doctree  config.doctree  contributing.doctree  convert.doctree  dataset.doctree  environment.pickle  generate.doctree  index.doctree  input.doctree  nnunet.doctree  preprocess.doctree  tool.doctree  utils.doctree  visualise.doctree
Multi dose-grids/: select-combine-multi-dose-grids.ipynb
_examples/: AutoSegmentation.html  AutoSegmentation.ipynb  Configuration.html  Configuration.ipynb  ConvertingData.html  ConvertingData.ipynb  DatasetPreparation.html  DatasetPreparation.ipynb  DoseMetrics.html  DoseMetrics.ipynb  GettingStarted.html  GettingStarted.ipynb  ObjectGeneration.html  ObjectGeneration.ipynb  Radiomics.html  Radiomics.ipynb  VisualiseData.html  VisualiseData.ipynb  WorkingWithData.html  WorkingWithData.ipynb  WorkingWithStructures.html  WorkingWithStructures.ipynb  nnUNet.html  nnUNet.ipynb
_sources/: analyse.rst.txt  dataset.rst.txt  index.rst.txt
_static/: custom.css
docs/: analyse.rst  conf.py  config.rst  convert.rst  dataset.rst  generate.rst  index.html  index.rst  input.rst  nnunet.rst  preprocess.rst  tool.rst  utils.rst  visualise.rst
examples/: AutoSegmentation.ipynb  Configuration.ipynb  ConvertingData.ipynb  DatasetPreparation.ipynb  DoseMetrics.ipynb  GettingStarted.ipynb  ObjectGeneration.ipynb  Pipeline.ipynb  PipelineExample.ipynb  Radiomics.ipynb  RunPipeline.ipynb  Testing-multi-dose-grid.ipynb  VisualiseData.ipynb  WorkingWithData.ipynb  WorkingWithStructures.ipynb  nnUNet.ipynb
pydicer/: __init__.py  config.py  constants.py  tool.py  (+4 more)
(+132 files in other folders)
