[tool.poetry]
name = "pydicer"
version = "0.1.1"
description = "PYthon Dicom Image ConvertER"
authors = ["Ingham Medical Physics"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.12.2"
black = "^22.1.0"
Sphinx = "^4.4.0"
pytest = "^6.2.5"
m2r2 = "^0.3.2"
sphinx-rtd-theme = "^1.0.0"
pydicom = ">=2.1.2"
SimpleITK = ">=2.0.2"
platipy = ">=0.4.1"
pyorthanc = ">=1.11.2"
argparse = ">=1.4.0"
pyradiomics = ">=3.0.1"
scikit-image = ">=0.19.2"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
black = "^22.3.0"
Sphinx = "^4.5.0"
pytest = "6.2.5"
m2r2 = "^0.3.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
