[tool.poetry]
name = "pydicer"
version = "0.1.0"
description = "PYthon Dicom Image ConvertER"
authors = ["Ingham Medical Physics"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pydicom = ">=2.1.2"
SimpleITK = ">=2.0.2"
pyorthanc = ">=1.11.2"
platipy = ">=0.5.0"
argparse = ">=1.4.0"
seaborn = "^0.12.0"
tqdm = "^4.55.1"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.5"
black = "^22.3.0"
pytest = "6.2.5"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.1.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-theme = "^1.0"
sphinx-click = "^4.3.0"
furo = "^2022.6.21"
nbsphinx = "^0.8.9"
m2r2 = "^0.3.3"
notebook = "^6.5.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
